hphp/hack/test/typecheck/shape_idx2.php
<?hh

type s = shape('x' => int);

/**
 * Too few arguments
 */
function test(s $s): void {
  Shapes::idx($s);
}
